--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@foile/crypto-pay-api": "^1.0.3",
     "dotenv": "^16.0.0",
+    "express": "^4.17.2",
     "mongoose": "^6.2.1",
     "telegraf": "^3.39.0",
     "telegraf-i18n": "^6.6.0"
