--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@foile/crypto-pay-api": "^1.0.3",
+    "body-parser": "^1.19.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.1",
     "telegraf": "^3.39.0",
     "telegraf-i18n": "^6.6.0"
